# raven-docx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-EN.md  README.md  biome.jsonc  commitlint.config.js  index.html  lefthook.yml  package.json  progress.md  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.dev/: TODO.md
.dev/archive/: implementation-plan.md  login-page.md  phase3-branch-plan.md
.dev/docs/: data-persistence.md  error-states.md  i18n-standards.md  module-split.md
.dev/meeting/: architecture-review-2026-06-09.md  requirements-review-2026-06-09.md
.dev/plan/: 2026-06-23-font-echo-cjk.md  2026-06-23-font-handling.md  2026-06-23-ribbon-enhancement.md  consolidation-plan-2026-06-09.md  phase3-pi-rpc-fix.md  phase4-branch-plan.md  ui-layout-alignment.md
.dev/proto/: settings.html  workspace.html
.dev/requirements/: requirements-business.md  requirements-functional.md  requirements-technical.md
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.ruler/: AGENTS.md  RELEASING.md  ruler.toml
scripts/: fetch-pi.ts  start-dev.ts
src/: app.test.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/pi-extensions/raven-docx/: hexId.test.ts  hexId.ts  index.ts  package.json  paragraphBuilder.test.ts  paragraphBuilder.ts  system-prompt.txt
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: credentials.rs  file.rs  keychain.rs  mod.rs  pi_agent.rs  system.rs
src-tauri/src/pi/: mod.rs
(+194 files in other folders)
