[package]
name = "geex-docx"
version = "0.2.0"
description = "A docx desktop application"
authors = ["geex"]
edition = "2021"
default-run = "geex-docx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "geex_docx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "geex-docx"
path = "src/main.rs"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sys-locale = "0.3"
keyring = "3"
dirs = "6"
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
# Phase 3: pi agent 子进程管理
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
